One click plugin

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
 	"johnpbloch/wordpress": "5.2.3",
 	"roots/wp-password-bcrypt": "1.0.0",
 	"wpackagist-plugin/wordfence": "6.3.22",
+	"wpackagist-plugin/one-click-demo-import": "2.5.2",
 	"wpackagist-plugin/all-in-one-seo-pack": "2.4.4",
 	"wpackagist-plugin/nginx-helper": "1.9.10",
 	"wpackagist-plugin/sendgrid-email-delivery-simplified": "1.11.7",
