--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
 	  ],
 	  "web/app/plugins/{$name}/": [
 		"wpackagist-plugin/all-in-one-seo-pack",
-		"wpackagist-plugin/debug-bar"
+		"wpackagist-plugin/debug-bar",
+		"wpackagist-plugin/one-click-demo-import"
 	  ],
 	  "web/app/themes/{$name}/": [
 		"type:wordpress-theme"
