--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
 	"koodimonni/composer-dropin-installer": "1.1.0",
 	"johnpbloch/wordpress": "5.2.3",
 	"roots/wp-password-bcrypt": "1.0.0",
-	"wpackagist-plugin/wordfence": "6.3.22",
+	"wpackagist-plugin/wordfence": "6.3.22",	
+	"wpackagist-plugin/elementor" : "2.7.1",
+	"wpackagist-plugin/kirki" : "3.0.45",
 	"wpackagist-plugin/one-click-demo-import": "2.5.2",
 	"wpackagist-plugin/all-in-one-seo-pack": "2.4.4",
 	"wpackagist-plugin/nginx-helper": "1.9.10",
@@ -60,6 +62,8 @@
 	  ],
 	  "web/app/plugins/{$name}/": [
 		"wpackagist-plugin/all-in-one-seo-pack",
+		"wpackagist-plugin/elementor",
+		"wpackagist-plugin/kirki",
 		"wpackagist-plugin/debug-bar",
 		"wpackagist-plugin/one-click-demo-import"
 	  ],
